@@ -1,6 +1,7 @@
 Revision history for IO-Async-Loop-Epoll-FD
 
 {{$NEXT}}
+          - Correctly unwatch handlers
 
 0.001     2024-01-27 17:44:34+01:00 Europe/Brussels
           Initial release to an unsuspecting world
